# xiniu-cli

./: README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
src/xiniu_cli/: __init__.py  cli.py
tests/: test_cli.py
