[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xiniu-cli"
version = "0.1.0"
description = "CLI wrapper for the Xiniu MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
xiniu = "xiniu_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
